[project]
name = "cicflowmeter"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Hieu Le", email = "hieulw99@gmail.com" }
]
urls = { repository = "https://github.com/hieulw/cicflowmeter" }
dependencies = [
    "numpy==1.26.2",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "scapy>=2.6.1",
    "scipy==1.11.4",
]

[project.scripts]
cicflowmeter = "cicflowmeter.sniffer:main"
